--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -25,7 +25,8 @@
     "@wishbeam/env": "workspace:*",
     "drizzle-kit": "catalog:drizzle",
     "drizzle-orm": "catalog:drizzle",
-    "pg": "catalog:drizzle"
+    "pg": "catalog:drizzle",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/bun": "catalog:",
