--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "catalog:tailwind",
     "clsx": "catalog:tailwind",
     "lucide-react": "catalog:",
+    "motion": "^12.23.15",
     "next-themes": "catalog:",
     "react": "catalog:react",
     "react-dom": "catalog:react",
