--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,9 +16,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "catalog:tailwind",
+    "@tanstack/react-form": "catalog:",
     "@tanstack/react-query": "catalog:trpc",
     "@tanstack/react-router": "catalog:vite",
     "@tanstack/react-router-ssr-query": "catalog:vite",
