--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@wishbeam/trpc",
+  "name": "@wishbeam/utils",
   "private": true,
   "type": "module",
   "imports": {
     "#*": "./src/*"
   },
   "exports": {
-    ".": "./src/index.ts"
+    "./schemas": "./src/schemas.ts"
   },
   "scripts": {
     "clean": "git clean -xdf .turbo node_modules dist .tanstack .nitro .output",
@@ -18,13 +18,6 @@
   },
   "prettier": "@wishbeam/prettier-config",
   "dependencies": {
-    "@trpc/server": "catalog:trpc",
-    "@wishbeam/auth": "workspace:*",
-    "@wishbeam/db": "workspace:*",
-    "@wishbeam/env": "workspace:*",
-    "@wishbeam/utils": "workspace:*",
-    "drizzle-orm": "catalog:drizzle",
-    "superjson": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
