--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,13 +10,13 @@ catalog:
   '@types/node': ^24.5.2
   better-auth: ^1.3.12
   hono: ^4.8.5
-  lucide-react: ^0.544.0
+  lucide-react: 0.544.0
   next-themes: ^0.4.6
   superjson: ^2.2.2
   type-fest: ^4.41.0
   typescript: 5.9.2
   use-intl: ^4.3.9
-  zod: ^4.1.9
+  zod: 4.1.9
   zustand: ^5.0.6
 
 catalogs:
