--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       db:
         condition: service_healthy
   db:
-    image: postgres
+    image: postgres:17
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
