--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -5,12 +5,14 @@ services:
       dockerfile: Dockerfile
     networks:
       - db-network
+      - pubsub-network
     env_file:
       - path: .env
         required: false
     command: sleep infinity
     environment:
-      DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:mysecretpassword@db-internal:5432/postgres}
+      DATABASE_URL: postgresql://postgres:mysecretpassword@db:5432/postgres
+      PUBSUB_URL: nats://pubsub:4222
       AUTH_DEV_MAGIC_LINK: true
       BETTER_AUTH_URL: http://localhost:3000
       BETTER_AUTH_SECRET: supersecretkey
@@ -24,18 +26,21 @@ services:
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-mysecretpassword}
     networks:
-      db-network:
-        aliases:
-          - db-internal
+      - db-network
     healthcheck:
       test: ['CMD', 'pg_isready', '-U', 'postgres', '-t', '10']
       interval: 10s
       timeout: 10s
       start_interval: 1s
       start_period: 1s
+  pubsub:
+    image: nats:2
+    networks:
+      - pubsub-network
 
 networks:
   db-network:
+  pubsub-network:
 
 volumes:
   db-data:
