--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,10 +5,10 @@ packages:
 
 catalog:
   '@t3-oss/env-core': ^0.13.8
-  '@tanstack/react-form': ^1.23.0
+  '@tanstack/react-form': ^1.23.4
   '@types/bun': ^1.2.22
   '@types/node': ^24.5.2
-  better-auth: ^1.3.12
+  better-auth: ^1.3.18
   lucide-react: 0.544.0
   next-themes: ^0.4.6
   superjson: ^2.2.2
@@ -25,7 +25,7 @@ catalogs:
     drizzle-orm: 1.0.0-beta.1-c0277c0
     pg: ^8.16.3
   react:
-    '@types/react': ^19.1.13
+    '@types/react': ^19.1.14
     '@types/react-dom': ^19.1.9
     react: ^19.1.1
     react-dom: ^19.1.1
@@ -35,19 +35,19 @@ catalogs:
     clsx: ^2.1.1
     tailwind-merge: ^3.3.1
     tailwindcss: ^4.1.13
-    tw-animate-css: ^1.3.8
+    tw-animate-css: ^1.4.0
   trpc:
-    '@tanstack/react-query': ^5.89.0
-    '@trpc/client': ^11.5.1
-    '@trpc/server': ^11.5.1
-    '@trpc/tanstack-react-query': ^11.5.1
+    '@tanstack/react-query': ^5.90.2
+    '@trpc/client': ^11.6.0
+    '@trpc/server': ^11.6.0
+    '@trpc/tanstack-react-query': ^11.6.0
   vite:
-    '@tanstack/react-router': ^1.131.47
-    '@tanstack/react-router-ssr-query': ^1.131.47
-    '@tanstack/react-start': ^1.131.47
-    '@tanstack/router-plugin': ^1.131.47
-    '@vitejs/plugin-react': ^5.0.3
-    vite: ^7.1.6
+    '@tanstack/react-router': ~1.131.50
+    '@tanstack/react-router-ssr-query': ~1.131.50
+    '@tanstack/react-start': ~1.131.50
+    '@tanstack/router-plugin': ~1.131.50
+    '@vitejs/plugin-react': ^5.0.4
+    vite: ^7.1.7
     vite-tsconfig-paths: ^5.1.4
 
 minimumReleaseAge: 1440
