--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "i18n-ally.enabledFrameworks": ["next-intl"],
-  "i18n-ally.localesPaths": ["packages/intl/messages"],
+  "i18n-ally.localesPaths": ["**/messages"],
   "i18n-ally.keystyle": "nested",
   "i18n-ally.sortKeys": true,
   "files.exclude": {
