--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,7 +39,7 @@
     "@wishbeam/intl": "workspace:*",
     "@wishbeam/trpc": "workspace:*",
     "@wishbeam/utils": "workspace:*",
-    "babel-plugin-react-compiler": "latest",
+    "babel-plugin-react-compiler": "catalog:react",
     "better-auth": "catalog:",
     "class-variance-authority": "catalog:tailwind",
     "clsx": "catalog:tailwind",
