--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -25,13 +25,14 @@ catalogs:
     drizzle-orm: 1.0.0-beta.1-c0277c0
     pg: ^8.16.3
   react:
-    '@types/react': ^19.1.14
-    '@types/react-dom': ^19.1.9
-    react: ^19.1.1
-    react-dom: ^19.1.1
+    '@types/react': ^19.2.0
+    '@types/react-dom': ^19.2.0
+    react: ^19.2.0
+    react-dom: ^19.2.0
+    babel-plugin-react-compiler: rc
   tailwind:
     '@tailwindcss/vite': ^4.1.13
-    class-variance-authority: ^0.7.1
+    class-variance-authority: 0.7.1
     clsx: ^2.1.1
     tailwind-merge: ^3.3.1
     tailwindcss: ^4.1.13
