--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
   "dockerComposeFile": "docker-compose.yaml",
   "service": "devcontainer",
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-  // vite dev/bun start, drizzle studio
+  // vite dev start, drizzle studio
   "forwardPorts": [3000, 4983],
   "postCreateCommand": "pnpm install && cd ./packages/db && pnpm db:push",
   "remoteUser": "root",
