--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -13,7 +13,7 @@
     "clean": "git clean -xdf .turbo node_modules dist .tanstack .nitro .output",
     "format": "prettier . --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --write",
     "format:check": "prettier . --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --check",
-    "generate-db-schema": "bun exec \"DATABASE_URL=url pnpm dlx @better-auth/cli@latest generate --config src/index.ts\"",
+    "generate-db-schema": "cross-env DATABASE_URL=url pnpm dlx @better-auth/cli@latest generate --config src/index.ts",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "typecheck": "tsc --noEmit"
@@ -25,7 +25,7 @@
     "better-auth": "catalog:"
   },
   "devDependencies": {
-    "@types/bun": "catalog:",
+    "@types/node": "catalog:",
     "@wishbeam/eslint-config": "workspace:*",
     "@wishbeam/prettier-config": "workspace:*",
     "@wishbeam/typescript-config": "workspace:*",
