--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -29,7 +29,7 @@
     "zod": "catalog:"
   },
   "devDependencies": {
-    "@types/bun": "catalog:",
+    "@types/node": "catalog:",
     "@wishbeam/eslint-config": "workspace:*",
     "@wishbeam/prettier-config": "workspace:*",
     "@wishbeam/typescript-config": "workspace:*",
