--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,16 +6,13 @@ packages:
 catalog:
   '@t3-oss/env-core': ^0.13.8
   '@tanstack/react-form': ^1.23.4
-  '@types/bun': ^1.2.22
   '@types/node': ^24.5.2
   better-auth: ^1.3.18
   lucide-react: 0.544.0
   superjson: ^2.2.2
-  type-fest: ^4.41.0
   typescript: 5.9.2
   use-intl: ^4.3.9
   zod: 4.1.9
-  zustand: ^5.0.6
 
 catalogs:
   drizzle:
@@ -28,7 +25,7 @@ catalogs:
     '@types/react-dom': ^19.2.0
     react: ^19.2.0
     react-dom: ^19.2.0
-    babel-plugin-react-compiler: rc
+    babel-plugin-react-compiler: ^1.0.0
   tailwind:
     '@tailwindcss/vite': ^4.1.13
     class-variance-authority: 0.7.1
