--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -26,7 +26,7 @@
     "drizzle-kit": "catalog:drizzle",
     "drizzle-orm": "catalog:drizzle",
     "pg": "catalog:drizzle",
-    "uuid": "^13.0.0"
+    "uuid": "catalog:"
   },
   "devDependencies": {
     "@types/node": "catalog:",
