--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,15 +4,15 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "clean": "git clean -xdf .turbo node_modules dist .tanstack .nitro .output",
-    "component": "pnpm dlx shadcn@latest add",
-    "postcomponent": "pnpm run format",
-    "dev": "vite",
+    "clean": "bun exec \"rm -rf node_modules dist .tanstack .nitro .output\"",
+    "component": "bunx shadcn@latest add",
+    "postcomponent": "bun run format",
+    "dev": "bunx --bun vite",
     "format": "prettier . --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --write",
     "format:check": "prettier . --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --check",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "start": "cross-env NODE_ENV=production node .output/server/index.mjs",
+    "start": "bun exec \"NODE_ENV=production bun run .output/server/index.mjs\"",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -28,16 +28,10 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-visually-hidden": "^1.2.3",
-    "@tailwindcss/vite": "catalog:tailwind",
     "@tanstack/react-form": "catalog:",
     "@tanstack/react-query": "catalog:trpc",
-    "@tanstack/react-router": "catalog:vite",
-    "@tanstack/react-router-ssr-query": "catalog:vite",
-    "@tanstack/react-start": "catalog:vite",
-    "@tanstack/router-plugin": "catalog:vite",
     "@trpc/client": "catalog:trpc",
     "@trpc/tanstack-react-query": "catalog:trpc",
-    "@vitejs/plugin-react": "catalog:vite",
     "@wishbeam/auth": "workspace:*",
     "@wishbeam/intl": "workspace:*",
     "@wishbeam/trpc": "workspace:*",
@@ -56,17 +50,22 @@
     "tw-animate-css": "catalog:tailwind",
     "use-intl": "catalog:",
     "vaul": "^1.1.2",
-    "vite": "catalog:vite",
-    "vite-tsconfig-paths": "catalog:vite",
     "zod": "catalog:"
   },
   "devDependencies": {
-    "@types/node": "catalog:",
+    "@tailwindcss/vite": "catalog:tailwind",
+    "@tanstack/react-router": "catalog:vite",
+    "@tanstack/react-router-ssr-query": "catalog:vite",
+    "@tanstack/react-start": "catalog:vite",
+    "@tanstack/router-plugin": "catalog:vite",
+    "@types/bun": "catalog:",
     "@types/react": "catalog:react",
     "@types/react-dom": "catalog:react",
+    "@vitejs/plugin-react": "catalog:vite",
     "@wishbeam/eslint-config": "workspace:*",
-    "@wishbeam/prettier-config": "workspace:*",
     "@wishbeam/typescript-config": "workspace:*",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "vite": "catalog:vite",
+    "vite-tsconfig-paths": "catalog:vite"
   }
 }
