--- a/.github/workflows/check-reusable.yaml
+++ b/.github/workflows/check-reusable.yaml
@@ -14,18 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
-        name: Install pnpm
+      - uses: oven-sh/setup-bun@v2
         with:
-          run_install: false
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          cache: 'pnpm'
+          bun-version: 1.3.0
 
       - name: Install dependencies
-        run: pnpm install
+        run: bun install
 
       - name: Run check
-        run: pnpm check
+        run: bun run check
