--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,19 @@
     "**/.tanstack": true
   },
   "search.exclude": {
-    "pnpm-lock.yaml": true,
+    "bun.lock": true,
     "**/routeTree.gen.ts": true
-  }
+  },
+  "json.schemas": [
+    {
+      "fileMatch": ["bun.lock"],
+      "schema": {
+        "allowTrailingCommas": true
+      }
+    }
+  ],
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "emmet.showExpandedAbbreviation": "never"
 }
