--- a/tools/eslint-config/package.json
+++ b/tools/eslint-config/package.json
@@ -6,7 +6,7 @@
     ".": "./eslint.config.js"
   },
   "scripts": {
-    "clean": "git clean -xdf .turbo node_modules dist .tanstack .nitro .output",
+    "clean": "bun exec \"rm -rf node_modules\"",
     "format": "prettier . --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --write",
     "format:check": "prettier . --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --check",
     "typecheck": "tsc --noEmit"
@@ -17,8 +17,7 @@
     "@eslint/js": "^9.36.0",
     "@tanstack/eslint-plugin-query": "^5.90.2",
     "@tanstack/eslint-plugin-router": "^1.132.0",
-    "@types/node": "catalog:",
-    "@wishbeam/prettier-config": "workspace:*",
+    "@types/bun": "catalog:",
     "@wishbeam/typescript-config": "workspace:*",
     "eslint": "^9.36.0",
     "eslint-plugin-react-compiler": "latest",
