--- a/tools/prettier-config/package.json
+++ b/tools/prettier-config/package.json
@@ -6,19 +6,14 @@
     ".": "./prettier.config.js"
   },
   "scripts": {
-    "clean": "git clean -xdf .turbo node_modules dist .tanstack .nitro .output",
+    "clean": "bun exec \"rm -rf node_modules\"",
     "format": "prettier . --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --write",
     "format:check": "prettier . --ignore-path ../../.gitignore --ignore-path ../../.prettierignore --check",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "@types/node": "catalog:",
+    "@types/bun": "catalog:",
     "@wishbeam/typescript-config": "workspace:*",
-    "prettier": "^3.6.2",
-    "prettier-plugin-packagejson": "^2.5.19",
-    "prettier-plugin-sort-json": "^4.1.1",
-    "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "catalog:"
   }
 }
