--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "prettier": "@wishbeam/prettier-config",
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@wishbeam/prettier-config": "workspace:*",
     "prettier": "^3.6.2",
     "prettier-plugin-packagejson": "^2.5.19",
     "prettier-plugin-sort-json": "^4.1.1",
