--- a/package.json
+++ b/package.json
@@ -86,5 +86,8 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "turbo": "^2.5.8"
   },
-  "packageManager": "bun@1.3.0"
+  "packageManager": "bun@1.3.0",
+  "patchedDependencies": {
+    "nitropack@2.12.6": "patches/nitropack@2.12.6.patch"
+  }
 }
