Add cluster start

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -26,6 +26,7 @@ FROM oven/bun:1 AS runner
 ENV NODE_ENV=production
 
 COPY --from=build /app/apps/web/package.json /app/web/
+COPY --from=build /app/apps/web/src/cluster.ts /app/web/src/
 COPY --from=build /app/apps/web/.output /app/web/.output
 
 COPY /packages/db/drizzle /app/db/drizzle
@@ -33,9 +34,8 @@ COPY --from=build /app/packages/db/dist /app/db
 
 COPY --from=build /app/packages/auth/dist /app/auth
 
-
 HEALTHCHECK --interval=10s --timeout=10s CMD [ "curl", "http://localhost:3000/trpc/health" ]
 
 USER bun
 EXPOSE 3000
-CMD [ "sh", "-c", "cd /app/db && bun run migrate.js && cd /app/auth && bun run generate-test-users.js && cd /app/web && bun run start" ]
+CMD [ "sh", "-c", "cd /app/db && bun run migrate.js && cd /app/auth && bun run generate-test-users.js && cd /app/web && bun run start-cluster" ]
