--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,5 +7,6 @@
     "target": "ES2024",
     "lib": ["ES2024", "DOM", "DOM.Iterable"]
   },
-  "extends": "@wishbeam/typescript-config"
+  "extends": "@wishbeam/typescript-config",
+  "exclude": [".nitro", ".output"]
 }
