--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,4 +1,4 @@
-FROM oven/bun:1 AS base
+FROM oven/bun:1-slim AS base
 ENV TURBO_TELEMETRY_DISABLED=1
 RUN bun install -g turbo
 
@@ -22,7 +22,7 @@ RUN --mount=type=secret,id=TURBO_TEAM,env=TURBO_TEAM \
 
 
 # Run
-FROM oven/bun:1 AS runner
+FROM oven/bun:1-slim AS runner
 ENV NODE_ENV=production
 
 COPY --from=build /app/apps/web/package.json /app/web/
@@ -34,6 +34,7 @@ COPY --from=build /app/packages/db/dist /app/db
 
 COPY --from=build /app/packages/auth/dist /app/auth
 
+RUN apt-get -y update && apt-get -y install curl
 HEALTHCHECK --interval=10s --timeout=10s CMD [ "curl", "http://localhost:3000/trpc/health" ]
 
 USER bun
