--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,7 +10,7 @@
     "./schema": "./src/schema/index.ts"
   },
   "scripts": {
-    "build": "bun build --entrypoints ./src/migrate.ts --outdir ./dist --target bun",
+    "build-scripts": "bun build --entrypoints ./src/migrate.ts --outdir ./dist --target bun",
     "clean": "bun exec \"rm -rf node_modules .turbo dist\"",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "bun run ./src/migrate.ts",
