--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,10 @@
       "outputs": ["dist", ".output"],
       "env": ["VITE_*", "NODE_ENV"]
     },
+    "build-scripts": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist"]
+    },
     "format": {
       "cache": false
     },
