--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,14 +45,17 @@ jobs:
           cache-from: type=registry,ref=${{ vars.REGISTRY }}/wishbeam/${{ matrix.image.name }}:latest
           cache-to: type=inline
 
-  trigger-coolify-deployment:
+  trigger-dokploy-deployment:
     runs-on: ubuntu-latest
     needs: build-and-push
-    if: ${{ success() }}
+    if: ${{ success() && vars.DOKPLOY_URL != '' && vars.DOKPLOY_APP_ID != '' }}
 
     steps:
-      - name: Trigger coolify deployment
+      - name: Trigger dokploy deployment
         run: |
-          curl -X 'GET' \
-          '${{ secrets.COOLIFY_WEBHOOK }}' \
-          -H 'Authorization: Bearer ${{ secrets.COOLIFY_TOKEN }}'
+          curl -X 'POST' \
+          '${{ vars.DOKPLOY_URL }}/api/application.deploy' \
+          -H 'accept: application/json' \
+          -H "Content-Type: application/json" \
+          -H 'x-api-key: ${{ secrets.DOKPLOY_API_KEY }}' \
+          -d '{"applicationId": "${{ vars.DOKPLOY_APP_ID }}"}'
