--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,17 +45,13 @@ jobs:
           cache-from: type=registry,ref=${{ vars.REGISTRY }}/wishbeam/${{ matrix.image.name }}:latest
           cache-to: type=inline
 
-  trigger-dokploy-deployment:
+  trigger-deployment:
     runs-on: ubuntu-latest
     needs: build-and-push
-    if: ${{ success() && vars.DOKPLOY_URL != '' && vars.DOKPLOY_APP_ID != '' }}
+    if: ${{ success() }}
 
     steps:
-      - name: Trigger dokploy deployment
+      - name: Trigger deployment
         run: |
-          curl -X 'POST' \
-          '${{ vars.DOKPLOY_URL }}/api/application.deploy' \
-          -H 'accept: application/json' \
-          -H "Content-Type: application/json" \
-          -H 'x-api-key: ${{ secrets.DOKPLOY_API_KEY }}' \
-          -d '{"applicationId": "${{ vars.DOKPLOY_APP_ID }}"}'
+          curl -X 'GET' \
+          '${{ vars.DEPLOYMENT_WEBHOOK }}'
