--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,2 +1,4 @@
 [install]
 minimumReleaseAge = 259200
+minimumReleaseAgeExcludes = ["@types/bun"]
+publicHoistPattern = [ "*eslint*", "*prettier*" ]
