--- a/tools/eslint-config/package.json
+++ b/tools/eslint-config/package.json
@@ -19,6 +19,7 @@
     "@tanstack/eslint-plugin-router": "^1.132.0",
     "@types/bun": "catalog:",
     "@wishbeam/typescript-config": "workspace:*",
+    "eslint": "^9.36.0",
     "eslint-plugin-react-compiler": "latest",
     "eslint-plugin-react-hooks": "^6.1.1",
     "eslint-plugin-react-refresh": "^0.4.22",
