--- a/tools/prettier-config/package.json
+++ b/tools/prettier-config/package.json
@@ -12,8 +12,13 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@types/bun": "catalog:",
     "@wishbeam/typescript-config": "workspace:*",
+    "prettier": "^3.6.2",
+    "prettier-plugin-packagejson": "^2.5.19",
+    "prettier-plugin-sort-json": "^4.1.1",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "catalog:"
   }
 }
