--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -5,14 +5,14 @@ services:
       dockerfile: Dockerfile
     networks:
       - db-network
-      - pubsub-network
+      - redis-network
     env_file:
       - path: .env
         required: false
     command: sleep infinity
     environment:
       DATABASE_URL: postgresql://postgres:mysecretpassword@db:5432/postgres
-      PUBSUB_URL: nats://pubsub:4222
+      REDIS_URL: redis://redis:6379
       TEST_AUTH: true
       BETTER_AUTH_URL: http://localhost:3000
       BETTER_AUTH_SECRET: supersecretkey
@@ -33,14 +33,14 @@ services:
       timeout: 10s
       start_interval: 1s
       start_period: 1s
-  pubsub:
-    image: nats:2
+  redis:
+    image: redis:8
     networks:
-      - pubsub-network
+      - redis-network
 
 networks:
   db-network:
-  pubsub-network:
+  redis-network:
 
 volumes:
   db-data:
