Revert "Try to build without cache"
This reverts commit dc745c3a733a42ff147e1a09991272834448ee4e.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,6 +39,11 @@ jobs:
             ${{ vars.REGISTRY }}/wishbeam/${{ matrix.image.name }}:latest
             ${{ vars.REGISTRY }}/wishbeam/${{ matrix.image.name }}:${{ github.sha }}
           build-args: ${{ matrix.image.build-args }}
+          secrets: |
+            TURBO_TEAM=${{ vars.TURBO_TEAM }}
+            TURBO_TOKEN=${{ secrets.TURBO_TOKEN }}
+          cache-from: type=registry,ref=${{ vars.REGISTRY }}/wishbeam/${{ matrix.image.name }}:latest
+          cache-to: type=inline
 
   trigger-deployment:
     runs-on: ubuntu-latest
